# dendritex

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
braincell/: __init__.py  _base.py  _integrators.py  _misc.py  _protocol.py
braincell/channel/: calcium.py  hyperpolarization_activated.py  leaky.py  potassium.py  potassium_calcium.py  sodium.py
braincell/channels/: calcium.py  hyperpolarization_activated.py  leaky.py  potassium.py  potassium_calcium.py  sodium.py
braincell/ion/: calcium.py  potassium.py  sodium.py
braincell/ions/: calcium.py  potassium.py  sodium.py
braincell/neuron/: multi_compartment.py  single_compartment.py
braincell/neurons/: multi_compartment.py  single_compartment.py
dendritex/: _base.py  _base_test.py  _integrators.py  _misc.py  _protocol.py
dendritex/channels/: calcium.py  hyperpolarization_activated.py  leaky.py  potassium.py  potassium_calcium.py  sodium.py
dendritex/ions/: calcium.py  potassium.py  sodium.py
dendritex/neurons/: multi_compartment.py  single_compartment.py
docs/: auto_generater.py  conf.py  index.rst
docs/apis/: braincell.rst
examples/: calcium_activation_functions.py  hh_neuron.py  simple_dendrite_model.py  simple_dendrite_model_fitting_by_adam.py  simple_dendrite_model_simulation.py  thalamus_single_compartment_neurons.py
examples/fitting_a_hh_neuron/: main.py
examples/golgi_model/: golgi.ipynb  golgi.py  golgi_mophology.py
