[build-system]
requires = ["setuptools", "numpy", 'jax', 'jaxlib']
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "build*",
    "dist*",
    "examples*",
    "braincell.egg-info*",
    "braincell/__pycache__*",
    "braincell/__init__.py"
]


[tool.distutils.bdist_wheel]
universal = true


[project]
name = "braincell"
description = "Biologically Detailed Brain Cell Modeling in JAX"
readme = 'README.md'
license = { text = 'Apache-2.0 license' }
requires-python = '>=3.9'
authors = [{ name = 'braincell Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = ['dendritic computation', 'dendritic modeling', 'brain modeling', 'neuron simulation']

dependencies = [
    'jax',
    'jaxlib',
    'numpy',
    'brainstate>=0.1.0',
    'brainunit>=0.0.2.post20240903',
]

dynamic = ['version']

[tool.flit.module]
name = "braincell"

[project.urls]
homepage = 'http://github.com/chaobrain/braincell'
repository = 'http://github.com/chaobrain/braincell'

[project.optional-dependencies]
testing = [
    'pytest',
]
